correctly align slogan

--- a/src/styles.css
+++ b/src/styles.css
@@ -105,6 +105,7 @@ main section.hero-section {
   display: flex;
   justify-content: center;
   align-items: center;
+
   flex-direction: column;
   margin: 12rem 0;
   position: relative;
@@ -633,4 +634,31 @@ section.footer {
 .footer div p {
   display: inline;
   color: var(--light-color);
+}
+
+/*Extra Mobile Responsiveness */
+
+@media screen and (max-width: 768px) {
+  .client-logos-container {
+    flex-direction: column;
+    align-items: center;
+    gap: 1rem;
+  }
+
+  main section.hero-section {
+    text-align: center;
+  }
+
+  section.hero-section .hero-slogan {
+    display: flex;
+    align-items: center;
+    flex-direction: column;
+    font-size: 4rem;
+  }
+
+  .hero-section .hero-slogan .container {
+    text-align: center;
+    display: flex;
+    padding-top: 1.5rem;
+  }
 }
